# python4yahdlc

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  MANIFEST.in  README.md  README.rst  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml  settings.yml
.github/workflows/: codeql.yml  test_and_publish.yml
examples/: README.rst  fsm_endpoint_1.py  fsm_endpoint_2.py  receive_data_frame.py  send_data_frame.py
examples/img/: README.rst  fsm_endpoint_1.dot  fsm_endpoint_2.dot
include/: fcs16.h  yahdlc.h
lib/: fcs16.c  yahdlc.c
src/: python4yahdlc.c
test/: test.py
tests/integration/: test_encode_decode.py
tests/unit/: test.py  test_frame_data.py  test_get_data.py
