[metadata]
name = python4yahdlc
version = 1.2.0
description = Python binding of the yahdlc library allowing to encode and decode HDLC frames.
long_description = file: README.rst
keywords = hdlc, yahdlc, binding, network
license = GPLv3
license_files = LICENSE.txt
author = Paul-Emmanuel Raoul
author_email = skyper@skyplabs.net
url = https://github.com/SkypLabs/python4yahdlc
project_urls =
    Bug Tracker = https://github.com/SkypLabs/python4yahdlc/issues
    Source Code = https://github.com/SkypLabs/python4yahdlc
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    Natural Language :: English
    Programming Language :: C
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[options]
python_requires = >=3.7, <4

[options.extras_require]
examples =
    fysom
    pyserial
tests =
    black
    ruff
    tox
